added type button

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,11 @@
             <!--прихований заголовок-->
             <h1 hidden>Наші роботи</h1>
             <ul>
-                <li><button class="button">Усі</button></li>
-                <li><button class="button">Веб-сайти</button></li>
-                <li><button class="button">Додатки</button></li>
-                <li><button class="button">Дизайн</button></li>
-                <li><button class="button">Маркетинг</button></li>
+                <li><button type="button" class="button">Усі</button></li>
+                <li><button type="button" class="button">Веб-сайти</button></li>
+                <li><button type="button" class="button">Додатки</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li>
@@ -79,13 +79,7 @@
                 </li>            
             </ul>
         </section>
-
     </main>
-
-
-
-    
-
     <footer>
       <a href="/">WebStudio</a>
       <address>
