--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,19 @@
     Розробка сайтів під ключ. Підтримка проєкту на всіх етапах розробки."
     />
     <title>Web Studio</title>
+     <!--Fonts-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+     <!--custom styles-->
+     <link rel="stylesheet" href="./css/styles.css"/>
   </head>
 <body>
     <header>
         <nav>
           <a href="./index.html">WebStudio</a>
           <ul>
-            <li><a href="">Студія</a></li>
+            <li><a href="./index.html">Студія</a></li>
             <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="">Контакти</a></li>
           </ul>
