--- a/index.html
+++ b/index.html
@@ -10,52 +10,58 @@
     Розробка сайтів під ключ. Підтримка проєкту на всіх етапах розробки."
     />
     <title>Web Studio</title>
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<!--custom styles-->
+<link rel="stylesheet" href="./css/styles.css"/>
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+  <body class="page">
+    <header class="header">
+      <nav class="main-nav">
+        <a class="logo" href="./index.html">WebStudio</a>
+        <ul class="list">
+          <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="list-item"><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li class="list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="btn-hero" type="button">Замовити послугу</button>
       </section>
       <section>
         <h2 hidden>Особливості</h2>
-        <ul>
-          <li>
-            <h3>увага до деталей</h3>
+        <ul class="list">
+          <li class="list-item">
+            <h3 class="sibe-title">увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>пунктуальність</h3>
+            <h3 class="sibe-title">пунктуальність</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>планування</h3>
+            <h3 class="sibe-title">планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>сучасні технології</h3>
+            <h3 class="sibe-title">сучасні технології</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -64,7 +70,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -93,7 +99,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="title">Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/our-team/ihor1.jpg" alt="teammate" width="270" height="260">
