--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <body class="page">
     <header class="header">
       <nav class="main-nav">
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">
+          Web<span class="logo-header">Studio</span></a>
         <ul class="list">
           <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
           <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
@@ -28,41 +29,41 @@
         </ul>
       </nav>
       <ul class="list">
-        <li class="list-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="list-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="list-item-contact"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list-item-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для <br/> вашого бізнесу</h1>
         <button class="btn-hero" type="button">Замовити послугу</button>
       </section>
       <section>
         <h2 hidden>Особливості</h2>
         <ul class="list">
           <li class="list-item">
-            <h3 class="sibe-title">увага до деталей</h3>
-            <p>
+            <h3 class="subtitle">увага до деталей</h3>
+            <p class="subtitle-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3 class="sibe-title">пунктуальність</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="subtitle">пунктуальність</h3>
+            <p class="subtitle-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3 class="sibe-title">планування</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="subtitle">планування</h3>
+            <p class="subtitle-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3 class="sibe-title">сучасні технології</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="subtitle">сучасні технології</h3>
+            <p class="subtitle-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -71,8 +72,8 @@
       </section>
       <section>
         <h2 class="title">Чим ми займаємося</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <img
               src="./images/what-we-do/img1.jpg"
               alt="крупним планом зображено програміста, який працює за робочим столом в офісі"
@@ -80,7 +81,7 @@
               height="290"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/what-we-do/img2.jpg"
               alt="дизайнер працює над інтерфейсом додатка для мобільних телефонів"
@@ -88,7 +89,7 @@
               height="290"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/what-we-do/img3.jpg"
               alt="креативний художник веб-дизайну з робочим графічним планшетом для вибору кольорів"
@@ -98,43 +99,43 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2 class="title">Наша команда</h2>
-        <ul>
-            <li>
+        <ul class="list">
+            <li class="list-item">
                 <img src="./images/our-team/ihor1.jpg" alt="teammate" width="270" height="260">
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="title-card">Ігор Дем'яненко</h3>
+                <p class="text-card">Product Designer</p>
             </li>
-            <li>
+            <li class="list-item">
                 <img src="./images/our-team/olha2.jpg" alt="teammate" width="270" height="260">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="title-card">Ольга Рєпіна</h3>
+                <p class="text-card">Frontend Developer</p>
             </li>
-            <li>
+            <li class="list-item">
                 <img src="./images/our-team/mykola3.jpg" alt="teammate" width="270" height="260">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="title-card">Микола Тарасов</h3>
+                <p class="text-card">Marketing</p>
             </li>
-            <li>
+            <li class="list-item">
                 <img src="./images/our-team/mykhailo4.jpg" alt="teammate" width="270" height="260">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="title-card">Михайло Єрмаков</h3>
+                <p class="text-card">UI Designer</p>
             </li>
         </ul>
       </section>
     </main>
     
-    <footer>
-      <a href="/">WebStudio</a>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <address>
-      <ul>
-        <li>
+      <ul class="list">
+        <li class="list-item">
           <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
-            м. Київ, пр-т Лесі Українки, 26</a>
+            <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="list-item"><a href="mailto:info@devstudio.com"><span class="contact>"> @devstudio.com</span></a></li>
+        <li class="list-item"><a href="tel:+380961111111"><span class="contact>">+38 096 111 11 11</span></a></li>
       </ul>
     </address>
     </footer>
