--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
      <!--custom styles-->
      <link rel="stylesheet" href="./css/styles.css"/>
   </head>
-<body>
+<body class="page">
     <header>
         <nav>
           <a href="./index.html">WebStudio</a>
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
       <ul>
         <li>
