--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,21 @@
      <!--custom styles-->
      <link rel="stylesheet" href="./css/styles.css"/>
   </head>
-<body class="page">
-    <header>
-        <nav>
-          <a href="./index.html">WebStudio</a>
-          <ul>
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
-          </ul>
-        </nav>
+  <body class="page">
+    <header class="header">
+      <nav class="main-nav">
+        <a class="logo link" href="./index.html">
+          Web<span class="logo-header">Studio</span></a>
+        <ul class="list">
+          <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="list-item"><a class="link" href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="list">
+        <li class="list-item-contact"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list-item-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
         <!--майбутній фільтр-->
