--- a/portfolio.html
+++ b/portfolio.html
@@ -38,73 +38,73 @@
         <section>
             <!--прихований заголовок-->
             <h1 hidden>Наші роботи</h1>
-            <ul>
-                <li><button type="button" class="button">Усі</button></li>
-                <li><button type="button" class="button">Веб-сайти</button></li>
-                <li><button type="button" class="button">Додатки</button></li>
-                <li><button type="button" class="button">Дизайн</button></li>
-                <li><button type="button" class="button">Маркетинг</button></li>
+            <ul class="list">
+                <li class="list-item"><button type="button" class="button">Усі</button></li>
+                <li class="list-item"><button type="button" class="button">Веб-сайти</button></li>
+                <li class="list-item"><button type="button" class="button">Додатки</button></li>
+                <li class="list-item"><button type="button" class="button">Дизайн</button></li>
+                <li class="list-item"><button type="button" class="button">Маркетинг</button></li>
             </ul>
-            <ul>
-                <li>
+            <ul class="list">
+                <li class="list-item">
                 <img src="./images/portfolio/img1.jpg" alt="на ноутбуці відкрито сайт 
                 з зображенням працівників" width="370" height="294">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="title-works">Технокряк</h2>
+                        <p class="text-works">Веб-сайт</p>
                     </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/portfolio/img2.jpg" alt="двоє баскетболістів" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title-works">Постер New Orlean vs Golden Star</h2>
+                    <p class="text-works">Дизайн</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/portfolio/img3.jpg" alt="логотип ресторана 
                     назва на фоні риби" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <h2 class="title-works">Ресторан Seafood</h2>
+                    <p class="text-works">Додаток</p>
                 </li>
-                <li><img src="./images/portfolio/img4.jpg" alt="чорні навушники" width="370" height="294">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                <li class="list-item"><img src="./images/portfolio/img4.jpg" alt="чорні навушники" width="370" height="294">
+                    <h2 class="title-works">Проєкт Prime</h2>
+                    <p class="text-works">Маркетинг</p>
                 </li>
-                <li><img src="./images/portfolio/img5.jpg" alt="дві коробки" width="370" height="294">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                <li class="list-item"><img src="./images/portfolio/img5.jpg" alt="дві коробки" width="370" height="294">
+                    <h2 class="title-works">Проєкт Boxes</h2>
+                    <p class="text-works">Додаток</p>
                 </li>
-                <li><img src="./images/portfolio/img6.jpg" alt="монітор" width="370" height="294">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                <li class="list-item"><img src="./images/portfolio/img6.jpg" alt="монітор" width="370" height="294">
+                    <h2 class="title-works">Inspiration has no Borders</h2>
+                    <p class="text-works">Веб-сайт</p>
                 </li>
-                <li><img src="./images/portfolio/img7.jpg" alt="розгорнутий журнал" width="370" height="294">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                <li class="list-item"><img src="./images/portfolio/img7.jpg" alt="розгорнутий журнал" width="370" height="294">
+                    <h2 class="title-works">Видання Limited Edition</h2>
+                    <p class="text-works">Дизайн</p>
                 </li>
-                <li><img src="./images/portfolio/img8.jpg" alt="біла бірка з написом" width="370" height="294">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                <li class="list-item"><img src="./images/portfolio/img8.jpg" alt="біла бірка з написом" width="370" height="294">
+                    <h2 class="title-works">Проєкт LAB</h2>
+                    <p class="text-works">Маркетинг</p>
                 </li>
-                <li><img src="./images/portfolio/img9.jpg" alt="руки людини на чорній клавіатурі
+                <li class="list-item"><img src="./images/portfolio/img9.jpg" alt="руки людини на чорній клавіатурі
                      сірого ноутбука" width="370" height="294">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <h2 class="title-works">Growing Business</h2>
+                    <p class="text-works">Додаток</p>
                 </li>            
             </ul>
         </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <address>
-      <ul>
-        <li>
+      <ul class="list">
+        <li class="list-item">
           <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
-            м. Київ, пр-т Лесі Українки, 26</a>
+            <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="list-item"><a href="mailto:info@devstudio.com"><span class="contact>"> @devstudio.com</span></a></li>
+        <li class="list-item"><a href="tel:+380961111111"><span class="contact>">+38 096 111 11 11</span></a></li>
       </ul>
     </address>
     </footer>
-</body>
+  </body>
 </html>
 
 
