--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,7 @@
   <body class="page">
     <header class="header">
       <nav class="main-nav">
-        <a class="logo link" href="./index.html">
-          Web<span class="logo-header">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="list">
           <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
           <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
