--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   <body class="page">
     <header class="header">
       <nav class="main-nav">
-        <a class="logo link" href="./index.html">
-          Web<span class="logo-header">Studio</span></a>
+        <a class="logo-link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="list">
-          <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="list-item"><a class="link current" href="./index.html">Студія</a></li>
           <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li class="list-item"><a class="link" href="">Контакти</a></li>
         </ul>
@@ -39,7 +38,7 @@
         <button class="btn-hero" type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2 hidden>Особливості</h2>
+        <h2 class="visually-hidden">Особливості</h2>
         <ul class="list">
           <li class="list-item">
             <h3 class="subtitle">увага до деталей</h3>
@@ -127,14 +126,14 @@
     </main>
     
     <footer class="footer">
-      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+      <a class="logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <address>
       <ul class="list">
         <li class="list-item">
-          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
+          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
             <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
-        <li class="list-item"><a href="mailto:info@devstudio.com"><span class="contact>"> @devstudio.com</span></a></li>
+        <li class="list-item"><span class="contact>"><a href="mailto:info@devstudio.com">@devstudio.com</a></span></li>
         <li class="list-item"><a href="tel:+380961111111"><span class="contact>">+38 096 111 11 11</span></a></li>
       </ul>
     </address>
