--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
   <body class="page">
     <header class="header">
       <nav class="main-nav">
-        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+        <a class="logo-link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="list">
           <li class="list-item"><a class="link" href="./index.html">Студія</a></li>
-          <li class="list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="list-item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
           <li class="list-item"><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -36,7 +36,7 @@
         <!--майбутній фільтр-->
         <section>
             <!--прихований заголовок-->
-            <h1 hidden>Наші роботи</h1>
+            <h1 class="visually-hidden">Наші роботи</h1>
             <ul class="list">
                 <li class="list-item"><button type="button" class="button">Усі</button></li>
                 <li class="list-item"><button type="button" class="button">Веб-сайти</button></li>
@@ -91,11 +91,11 @@
         </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+      <a class="logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <address>
       <ul class="list">
         <li class="list-item">
-          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
+          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
             <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
         <li class="list-item"><a href="mailto:info@devstudio.com"><span class="contact>"> @devstudio.com</span></a></li>
