--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             </ul>
             <ul class="list">
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                 <img src="./images/portfolio/img1.jpg" alt="на ноутбуці відкрито сайт 
                 з зображенням працівників" width="370" height="294">
                         <h2 class="title-works">Технокряк</h2>
@@ -54,14 +54,14 @@
                       </a>
                     </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                     <img src="./images/portfolio/img2.jpg" alt="двоє баскетболістів" width="370" height="294">
                     <h2 class="title-works">Постер New Orlean vs Golden Star</h2>
                     <p class="text-works">Дизайн</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                     <img src="./images/portfolio/img3.jpg" alt="логотип ресторана 
                     назва на фоні риби" width="370" height="294">
                     <h2 class="title-works">Ресторан Seafood</h2>
@@ -69,42 +69,42 @@
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                     <img src="./images/portfolio/img4.jpg" alt="чорні навушники" width="370" height="294">
                     <h2 class="title-works">Проєкт Prime</h2>
                     <p class="text-works">Маркетинг</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                   <img src="./images/portfolio/img5.jpg" alt="дві коробки" width="370" height="294">
                     <h2 class="title-works">Проєкт Boxes</h2>
                     <p class="text-works">Додаток</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                   <img src="./images/portfolio/img6.jpg" alt="монітор" width="370" height="294">
                     <h2 class="title-works">Inspiration has no Borders</h2>
                     <p class="text-works">Веб-сайт</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                   <img src="./images/portfolio/img7.jpg" alt="розгорнутий журнал" width="370" height="294">
                     <h2 class="title-works">Видання Limited Edition</h2>
                     <p class="text-works">Дизайн</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                   <img src="./images/portfolio/img8.jpg" alt="біла бірка з написом" width="370" height="294">
                     <h2 class="title-works">Проєкт LAB</h2>
                     <p class="text-works">Маркетинг</p>
                   </a>
                 </li>
                 <li class="list-item">
-                  <a href="">
+                  <a href="" class="list-link">
                   <img src="./images/portfolio/img9.jpg" alt="руки людини на чорній клавіатурі
                      сірого ноутбука" width="370" height="294">
                     <h2 class="title-works">Growing Business</h2>
