--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
           <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
             <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
-        <li class="list-item"><span class="contact>"><a href="mailto:info@devstudio.com">@devstudio.com</a></span></li>
-        <li class="list-item"><a href="tel:+380961111111"><span class="contact>">+38 096 111 11 11</span></a></li>
+        <li class="list-item-contact"><a class="link" href="mailto:info@devstudio.com"><span class="contacts"> @devstudio.com</span></a></li>
+        <li class="list-item-contact"><a class="link" href="tel:+380961111111"><span class="contacts">+38 096 111 11 11</span></a></li>
       </ul>
     </address>
     </footer>
