--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <address>
       <ul class="list">
         <li class="list-item">
-          <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
+          <a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
             <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
         </li>
         <li class="list-item-contact"><a class="link" href="mailto:info@devstudio.com"><span class="contacts">info@devstudio.com</span></a></li>
