--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
       <address>
       <ul class="list">
         <li class="list-item">
-          <a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
-            <span class="adress"> м. Київ, пр-т Лесі Українки, 26</span></a>
+          <a class="link adress" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="blank" rel="noopener noreferrer">
+         м. Київ, пр-т Лесі Українки, 26</a>
         </li>
-        <li class="list-item-contact"><a class="link" href="mailto:info@devstudio.com"><span class="contacts">info@devstudio.com</span></a></li>
-        <li class="list-item-contact"><a class="link" href="tel:+380961111111"><span class="contacts">+38 096 111 11 11</span></a></li>
+        <li class="list-item-contact"><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="list-item-contact"><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
     </footer>
